# Xythrion

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev.docker-compose.yml  docker-compose.yml  prod.docker-compose.yml  pyproject.toml  renovate.json  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
alembic/: env.py
alembic/versions/: 19211134a4cf_created_link_map_table.py
api/: .dockerignore  Dockerfile  README.md  alembic.ini  dev.Dockerfile  main.py  pyproject.toml  run.py  settings.py
api/alembic/: env.py
api/alembic/versions/: 19ac78d5b70e_created_trusted_table.py  55d7c78f3b9c_created_web_map_table.py  6ff05be1c24d_link_map_command_metrics_drg_builds.py  8b6f07fc0528_created_pins_table.py  9006a86c02bb_added_command_metrics_table.py  f93e4669750d_changed_table_names.py
api/app/: __main__.py  application.py  gunicorn_runner.py  lifetime.py  logging.py  main.py  run.py  settings.py
api/app/database/: __init__.py  base.py  db.py  dependencies.py  models.py  utils.py
api/app/database/crud/: base.py  command_metric.py  link_map_channel.py  link_map_converter.py  pin.py  trusted.py
api/app/database/models/: __init__.py  command_metric.py  link_map.py  pin.py  trusted.py
api/app/routers/: __init__.py  application.py  command_metric.py  lifetime.py  link_map.py  pin.py  trusted.py
api/app/routers/command_metric/: router.py  schemas.py
api/app/routers/deep_rock_galactic/: router.py  schemas.py
api/app/routers/docker/: router.py  schemas.py
api/app/routers/link_map/: router.py  schemas.py
api/app/routers/pin/: router.py  schemas.py
api/app/routers/schemas/: link_map.py  trusted.py
api/app/routers/trusted/: router.py  schemas.py
api/app/routers/v1/: __init__.py  command_metrics.py  drg.py  link_map.py  ping.py  pins.py  state.py  trusted.py  web_map.py
api/app/routers/v1/docker/: router.py
api/app/routers/web_map/: router.py  schemas.py
api/app/tests/: conftest.py  test_main.py
api/app/tests/database/models/: test_link_map.py
api/app/tests/routers/: test_command_metric.py  test_link_map.py  test_pin.py  test_ping.py  test_router_command_metric.py  test_router_link_map.py  test_router_trusted.py  test_trusted.py
api/app/tests/utils/: test_parsing.py
api/app/utils/: __init__.py  decorators.py  graphing.py  parsing.py
api/database/: __init__.py  db.py  models.py
api/migrations/: env.py
api/migrations/versions/: 1698549920-e53d084bab02_created_base_tables.py  1703394739-5bb6c7e09194_removed_drg_more_specific_pin_model.py  1704604857-5f91f5cf93fe_addition_of_channel_map_relationship_in_.py  1705816115-ffb8e9971cfc_combined_web_mapping_into_link_mapping.py  1706323986-1875c6de1bdf_to_link_attribute_on_link_maps_is_.py  1706337445-5bff80c8a7f3_created_base_tables.py  1714395912-a80273b97b54_created_base_tables.py  1714397098-87e3f598d749_created_base_tables.py  1714397782-40992cc96dc5_created_base_tables.py  1715412531-2c4eb0418e4d_dropped_command_metric_table.py  b1a0d03ccfce_base_models.py
api/routers/: __init__.py  link_map.py  ping.py
api/routers/v1/: __init__.py  command_metrics.py  link_map.py
api/tests/: test_main.py
api/tests/utils/: test_graphing.py  test_parsing.py
api/utils/: decorators.py  graphing.py
bot/: .env.sample  Dockerfile  README.md  pyproject.toml
bot/bot/: __main__.py  api.py  bot.py  constants.py  context.py  settings.py
bot/bot/extensions/core/: error_handler.py  eval.py  extensions.py  trusted.py
bot/bot/extensions/games/: doom.py  drg.py  helldivers.py
bot/bot/extensions/games/minecraft/: distances.py  modrinth.py  stacks.py
bot/bot/extensions/games/minecraft/_models/modrinth/: project.py  search.py
bot/bot/extensions/graph_generation/: expressions.py  manual.py  randoms.py
bot/bot/extensions/image_generation/: gradient_images.py  gradient_minecraft_skins.py
bot/bot/extensions/info/: dates.py  misc.py  ping.py  source.py  tags.py
bot/bot/extensions/mapping/: link_map.py  pins.py  twitter.py
bot/bot/extensions/mapping/_utils/tests/: test_converter.py
bot/bot/resources/tags/: contextmanager_decorator.md
bot/bot/tests/utils/: test_converters.py  test_formatting.py  test_outliers.py
bot/bot/utils/: README.md  __init__.py  checks.py  converters.py  dataframes.py  decorators.py  extensions.py  formatting.py  gradients.py  pagination.py
bot/bot/utils/plotting/: __init__.py  builder.py  errors.py  histogram.py  line.py  scatter.py
postgres/: init.sql
services/grafana/dashboards/: fastapi_metrics.json
services/prometheus/: prometheus.yml
site/: package.json
site/app/: layout.tsx  page.tsx
site/components/: icons.tsx  navbar.tsx  theme-switch.tsx
site/config/: site.ts
xythrion/: Dockerfile  __main__.py  api.py  bot.py  context.py  dev.Dockerfile  pyproject.toml
xythrion/bot/: __init__.py  __main__.py  api.py  bot.py  constants.py  context.py
xythrion/bot/extensions/: __init__.py
xythrion/bot/utils/: __init__.py  checks.py  converters.py  decorators.py  formatting.py  gradients.py
xythrion/extensions/core/: __init__.py  administration.py  extensions.py  warnings.py
xythrion/extensions/games/: __init__.py  drg.py
xythrion/extensions/generation/: __init__.py  expr.py  rand.py
xythrion/extensions/graph_generation/: expressions.py  randoms.py
xythrion/extensions/image_generation/: __init__.py  gradient_images.py  gradient_minecraft_skins.py  gradients.py
xythrion/extensions/info/: __init__.py  dates.py  links.py  ping.py
xythrion/extensions/mapping/: __init__.py  link_map.py  link_maps.py  links.py  web.py
xythrion/extensions/meta/: __init__.py  links.py
xythrion/extensions/space/: __init__.py  mars_weather.py
xythrion/extensions/utility/: __init__.py  basic.py  links.py  ping.py
xythrion/extensions/voice/: __init__.py  interactions.py  streaming.py
xythrion/tests/utils/: test_converters.py  test_formatting.py
xythrion/utils/: __init__.py  converters.py  executor.py  formatting.py  gradients.py  graphing.py  plotting.py
(+35 files in other folders)
