[project]
dependencies = []
requires-python = ">=3.12"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/api",
    "-e file:///${PROJECT_ROOT}/bot",
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
    "testcontainers[postgres]>=4.7.0",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
