[project]
name = "Xythrion-API"
version = "0.1.0"
description = "..."
authors = [
    {name = "Xithrius", email = "xithrius@gmail.com"},
]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "sympy>=1.12.0",
    "fastapi>=0.101.1",
    "uvicorn>=0.23.2",
    "pydantic>=1.10.5",
    "httpx>=0.24.1",
    "asyncpg>=0.27.0",
    "pillow>=10.0.0",
    "croniter>=1.4.1",
    "ormar[postgres]>=0.12.2",
    "alembic>=1.11.3",
    "matplotlib>=3.8.0",
    "docker>=6.1.3",
]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.0.285"
]
format = [
    "black>=23.7.0"
]
precommit = [
    "pre-commit>=3.3.3",
]
test = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
start = "uvicorn app.run:main"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
migrate = "alembic revision --autogenerate -m"
upgrade = "alembic upgrade head"
# test = "pytest"

[tool.ruff]
target-version = "py311"
extend-exclude = [".cache"]
ignore = [
    "ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN206", "ANN401",
    "B904",
    "C401", "C408",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D212", "D214", "D215", "D301",
    "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
    "E731",
    "RET504",
    "RUF005",
    "S101", "S311",
    "SIM102", "SIM108",
]
line-length = 120
select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "ISC", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
