[project]
name = "xythrion-api"
version = "0.1.0"
description = "API portion of Xythrion"
authors = [{ name = "Xithrius", email = "xithrius@gmail.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0.post1",
    "gunicorn>=21.2.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "httptools>=0.6.1",
    "yarl>=1.9.4",
    "ujson>=5.9.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
lint-format = ["ruff>=0.1.15"]
precommit = ["pre-commit>=3.6.0"]
test = [
    "pytest>=8.0.0",
    "anyio>=4.2.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.3",
    "pytest-xdist>=3.5.0",
    "psycopg2-binary>=2.9.9",
    "testcontainers[postgres]>=3.7.1",
]

[tool.pdm.scripts]
start = "python3 -m app"

# Linting and formatting
lint = "pre-commit run --all-files"
fmt = "ruff format ."
precommit = "pre-commit install"

# Database migrating
migrate = "alembic revision --autogenerate -m"
upgrade = "alembic upgrade head"

# Testing
test = "python3 -m pytest --ff"
atest = "python3 -m pytest -n auto --ff"
vtest = "python3 -m pytest -vvv --ff"
retest = "python3 -m pytest --lf"
test-cov = "python3 -m pytest --cov=./ --cov-report=xml"
html = "coverage html"
report = "coverage report --sort=Cover"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
extend-exclude = [".cache"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN204",
    "ANN206",
    "ANN401",
    "B904",
    "C401",
    "C408",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "D214",
    "D215",
    "D301",
    "D400",
    "D401",
    "D402",
    "D404",
    "D405",
    "D406",
    "D407",
    "D408",
    "D409",
    "D410",
    "D411",
    "D412",
    "D413",
    "D414",
    "D416",
    "D417",
    "E731",
    "RET504",
    "RUF005",
    "S101",
    "S311",
    "SIM102",
    "SIM108",
]
line-length = 120
select = [
    "ANN",
    "B",
    "C4",
    "D",
    "DTZ",
    "E",
    "F",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TID",
    "UP",
    "W",
]
