[project]
name = "xythrion-bot"
version = "0.1.0"
description = "Bot portion of Xythrion"
authors = [{ name = "Xithrius", email = "xithrius@gmail.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "discord-py==2.3.2",
    "python-dotenv==1.0.1",
    "loguru==0.7.2",
    "httpx==0.27.0",
    "pillow==10.2.0",
    "numpy==1.26.4",
    "lxml==5.1.0",
    "beautifulsoup4==4.12.3",
    "tabulate==0.9.0",
    "humanize==4.9.0",
    "seaborn==0.13.2",
    "scipy==1.12.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
precommit = ["pre-commit==3.6.2"]
test = [
    "anyio==4.3.0",
    "pytest==8.1.1",
    "pytest-cov==4.1.0",
    "pytest-env==1.1.3",
    "pytest-xdist==3.5.0",
    "pytest-memray>=1.5.0",
]

[tool.pdm.scripts]
start = "python3 -m bot"

# Linting and formatting
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

# Testing
test = "python3 -m pytest --ff"
atest = "python3 -m pytest -n auto --ff"
vtest = "python3 -m pytest -vvv --ff"
retest = "python3 -m pytest --lf"
memtest = "python3 -m pytest -ff --memray"

# Coverage
test-cov = "python3 -m pytest --cov=./ --cov-report=xml"
html = "coverage html"
report = "coverage report"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.pyright]
venvPath = "."
venv = ".venv"

include = ["bot/"]
ignore = ["bot/**/source.py", "bot/**/eval.py"]

reportIncompatibleVariableOverride = false
reportIncompatibleMethodOverride = false
