[project]
name = "xythrion-bot"
version = "0.1.0"
description = "Bot portion of Xythrion"
authors = [{ name = "Xithrius", email = "xithrius@gmail.com" }]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "discord-py>=2.4.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "numpy>=2.0.1",
    "lxml>=5.2.2",
    "beautifulsoup4>=4.12.3",
    "tabulate>=0.9.0",
    "humanize>=4.10.0",
    "seaborn>=0.13.2",
    "scipy>=1.14.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
precommit = [
    "pre-commit>=3.8.0",
]
test = [
    "anyio>=4.4.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.3",
    "pytest-xdist>=3.6.1",
]

[tool.pdm.scripts]
start = "python3 -m bot"

# Linting and formatting
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

# Testing
test = "pytest --ff"
atest = "pytest -n auto --ff"
vtest = "pytest -vvv --ff"
retest = "pytest --lf"
memtest = "pytest -ff --memray"

# Coverage
test-cov = "pytest --cov=./ --cov-report=xml"
html = "coverage html"
report = "coverage report"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = ["bot/extensions/*", "bot/*.py", "bot/utils/plotting/*"]
